# TESIS

robot/: CMakeLists.txt  package.xml
robot/config/: joint_trajectory_controller.yaml
robot/launch/: display.launch  display2.launch.py  gazebo.launch  gazebo.launch.py
robot/robot/: package.xml  setup.py
robot/robot/config/: joint_trajectory_controller.yaml
robot/robot/launch/: display2.launch.py  display_rviz.launch.py  gazebo.launch.py
robot/robot/meshes/: link3.STL  link4.STL
robot/robot/robot/: markers.py  robot_dynamics.py  robot_functions.py  test_diffkine.py  test_rviz.py
robot/robot/urdf/: robot.csv  robot.urdf.xacro
robot/urdf/: robot.urdf
