<?xml version="1.0"?>
<package format="3">
  <name>robot</name>
  <version>1.0.0</version>
  <description>URDF Description package for ROBOT_TESIS</description>

  <maintainer email="anthony@example.com">Anthony</maintainer>
  <license>BSD</license>

  <!-- Sistema de construcción en ROS 2 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependencias en tiempo de compilación -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>

  <!-- Dependencias en tiempo de ejecución -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-rbdl</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

